fix fake-LaTeX CSS (and make it entirely optional)
This had been broken in the move into Pelican, and wasn't important
enough to get attention at the time. Now it's working, but as it is
silly (and more importantly the CSS toggle in JS is not great;
there's a flash of unstyled content before it changes), it needed
to be made optional too. So there's a new setting in the Tech Notes
config group which switches it off completely.
Because it's silly, it's off by default.

Being able to choose between light and dark mode, however, is
*not* silly, but maybe the right way to do that is with two
builds of static content — and not using this JS toggle which is
modifying the applied style sheet dynamically as the page loads
:-O

--- a/tech_notes/buggy-theme/static/css/style.css
+++ b/tech_notes/buggy-theme/static/css/style.css
@@ -86,7 +86,8 @@
 
 body {
     margin: 0;
-    background: #151515 url("../images/bkg.png") 0 0;
+    /* background: #151515 url("../images/bkg.png") 0 0; */
+    background-color: #151515;
     color: #eaeaea;
     font-size: 16px;
     line-height: 1.5;
@@ -206,9 +207,11 @@ dt {
     font-weight:bold
 }
 
+/*
 ul li {
     list-style-image: url("../images/bullet.png")
 }
+*/
 
 blockquote {
     color: #aaa;
@@ -285,12 +288,7 @@ hr {
     width: 16px;
     height: 16px;
     margin: 1px 8px 0 0;
-    float:left
-}
-
-.btn-github .icon {
-    opacity: 0.6;
-    background: url("../images/blacktocat.png") 0 0 no-repeat
+    float:left;
 }
 
 a {
